--- a/webdev/index.html
+++ b/webdev/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>东农校内 - 一卡通信息</title>
+    <title>东农校内 - 一卡通信息（测试版）</title>
   </head>
   <body>
     <div id="app-box"></div>
