Nightly Commit Added favicon and modified app's name

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>东农校内 - 一卡通信息（测试版）</title>
+    <title>校园卡信息查询</title>
+    <link rel="shortcut icon" href="https://alsu-storage.b0.upaiyun.com/neau-card/static/img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="app-box"></div>
